atomicgrader/atomicgrader_apps-v1_Deployment_ag-otter-worker-async.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ag-otter-worker-async
  namespace: atomicgrader
spec:
  selector:
    matchLabels:
      app: ag-otter-worker-async
  template:
    metadata:
      labels:
        app: ag-otter-worker-async
    spec:
      containers:
      - command:
        - celery
        - -A
        - config
        - worker
        - -l
        - info
        - -Q
        - gemini
        - --pool
        - threads
        - --concurrency
        - '64'
        image: ghcr.io/atomicgrader/otter:latest
        name: otter-worker
        resources:
          limits:
            memory: 8Gi
          requests:
            cpu: 50m
            memory: 1Gi
        volumeMounts:
        - mountPath: /assets
          name: ag-assets
      imagePullSecrets:
      - name: ghcr-auth
      volumes:
      - name: ag-assets
        persistentVolumeClaim:
          claimName: ag-assets
