atomicgrader/atomicgrader_v1_Service_ag-assets.yaml
apiVersion: v1
kind: Service
metadata:
  name: ag-assets
  namespace: atomicgrader
spec:
  ports:
  - port: 80
  selector:
    app: ag-assets
