atomicgrader/atomicgrader_v1_Service_ag-otter.yaml
apiVersion: v1
kind: Service
metadata:
  name: ag-otter
  namespace: atomicgrader
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: ag-otter
