atomicgrader/atomicgrader_v1_Service_ag-walrus.yaml
apiVersion: v1
kind: Service
metadata:
  name: ag-walrus
  namespace: atomicgrader
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: ag-walrus
